static/css/style.css
/* Global Styles */
body {
  background-color: #333;
  color: #fff;
  margin: 0;
}

.container {
  max-width: 800px;
  padding: 20px;
}

.header {
  background-color: #222;
  color: #fff;
  display: flex;
  justify-content: space-between;
  padding: 20px;
}

h1, h2, h3 {
  margin-top: 0;
}

a {
  color: #222;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

/* Styles for Index Page */
.post {
  margin-bottom: 20px;
  padding: 20px;
  background-color: #444;
  border: 1px solid #333;
}

.post-title {
  font-size: 24px;
  margin-bottom: 10px;
}

.post-meta {
  font-style: italic;
  margin-bottom: 10px;
}

.post-content {
  margin-bottom: 10px;
}

.post-actions {
  margin-top: 10px;
}

.upvote, .downvote {
  margin-right: 10px;
}

/* Styles for Post Detail Page */
.review {
  margin-bottom: 20px;
  padding: 20px;
  background-color: #444;
  border: 1px solid #333;
}

.review-title {
  font-size: 20px;
  margin-bottom: 10px;
}

.review-meta {
  font-style: italic;
  margin-bottom: 10px;
}

.review-content {
  margin-bottom: 10px;
}

form {
  display: block;
  margin: 0 auto;
  max-width: 30rem;
  border-radius: 0.5rem;
  color: #fff;
}

.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.detailhead {
  margin-top: 10px;
  overflow: hidden;
  position: relative;
  display: inline-block;
  /* height: 33vh; */
  width: 100%;
}

.detailhead-text {
  background-color: #222;
  color: #fff;
  position: relative;
}

.detailhead-image {
  position: relative;
  overflow: hidden;
}

.detailhead-image:after {
  content: "";
  position: absolute;
  top: 0;
  right: 90%;
  height: 100%;
  width: 150%;
  background: #222;
  -webkit-transform: skew(15deg);
  -moz-transform: skew(15deg);
  transform: skew(15deg);
  z-index: 100;
}

.card {
  border: none;
  background-color: transparent;
}

button {
  background-color: #ccc;
  color: #fff;
  border: none;
  padding: 10px 20px;
  cursor: pointer;
  text-decoration: none;
}

button, input[type="submit"] {
  background-color: #ccc;
  border: none;
  color: #fff;
  cursor: pointer;
  padding: 10px 20px;
  transition: background-color 0.2s ease;
}

button:hover, input[type="submit"]:hover {
  background-color: #aaa;
}

.full-width {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

